--- a/views/index.erb
+++ b/views/index.erb
@@ -6,16 +6,73 @@
   <meta name="apple-touch-fullscreen" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes"> 
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <style>
+    *{
+      margin:0;
+      padding:0;
+      font-weight:lighter;
+    }
+    body{
+      font-family:"Open-sans", sans-serif;
+      color:#333;
+      font-size:17px;
+    }
+    header{
+      background:#333;
+      color:white;
+      padding:2em;
+    }
+    section{
+      padding:2em;
+    }
+    .wrapper{
+      max-width:40em;
+      margin: 0 auto;
+    }
+    h1{
+      font-size:2em;
+    }
+    h2{
+      font-size:1.5em;
+    }
+    button{
+      display: block;
+      background: #6DA7EA;
+      color: white;
+      padding: 1em;
+      font-size: 1em;
+      border: none;
+      width: 100%;
+      box-shadow: 1px 3px 0 #333;
+      cursor:pointer;
+      box-sizing:border-box;
+      border-radius:2px;
+      outline:none;
+      transition: all 0.5s ease-in;
+    }
+    button:active{
+      box-shadow: 0 0 0 #333;
+    }
+    button:hover{
+      background:#7FB5F4;
+      box-shadow: 2px 4px 1px #333;
+
+    }
+  </style>
   <title>Mountie</title>
 </head>
 <body>
   <header>
-    <h1>Mountie</h1>
+    <div class="wrapper">
+      <h1>Mountie</h1>
+    </div>
   </header>
   <section>
-    <p>Randomly generated mountains.</p>
-    <%= @svg %>
-    <button id="new">New mountain!</button>
+    <div class="wrapper">
+      <h2>Randomly generated mountains.</h2>
+      <%= @svg %>
+      <button id="new">New mountain!</button>
+    </div>
   </section>
   <script src="/walkway.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
