moving svg out from tree

--- a/views/index.erb
+++ b/views/index.erb
@@ -71,7 +71,7 @@
     <div class="wrapper">
       <h2>Randomly generated mountains.</h2>
       <%= @svg %>
-      <%= @tree %>
+      <svg><%= @tree %></svg>
       <button id="new">New mountain!</button>
     </div>
   </section>
