path bits moved out into a module, hut added

--- a/views/index.erb
+++ b/views/index.erb
@@ -71,7 +71,10 @@
     <div class="wrapper">
       <h2>Randomly generated mountains.</h2>
       <%= @mountains %>
-      <svg width="680" height="408"><%= @trees %></svg>
+      <svg width="680" height="408">
+        <%= @trees %>
+        <%= @hut %>
+      </svg>
       <button id="new">New mountain!</button>
     </div>
   </section>
